update my Sila QA && index add 2025

--- a/vinaya/index.html
+++ b/vinaya/index.html
@@ -315,7 +315,7 @@ a {
 
 </style>
 <script>
-var ArrLi = ["過量床足戒.txt","菩薩戒體相關資料.txt","為何要持戒.txt","滅諍犍度.txt","期末考2024.txt","期末考2023下.txt","期末考2023.txt","期末考2022下.txt","期末考2022.txt","期中考2024.txt","期中考2023下.txt","期中考2023.txt","期中考2022下.txt","期中考2022.txt","有難蘭若受食戒「弓量」.txt","新衣不作壞色著戒.txt","授具足戒.txt","戒律書畾.adb.ini","戒學答問.html","懺悔的意義.txt","律藏的文獻層次.html","四諍.txt","內觀染著.txt","不受食戒.txt","txtmore.js","taisho.adb.ini","onlytxtmore.js","onlymoretag.js","moretag.js"]
+var ArrLi = ["過量床足戒.txt","菩薩戒體相關資料.txt","為何要持戒.txt","滅諍犍度.txt","期末考2024下.txt","期末考2024.txt","期末考2023下.txt","期末考2023.txt","期末考2022下.txt","期末考2022.txt","期中考2024.txt","期中考2023下.txt","期中考2023.txt","期中考2022下.txt","期中考2022.txt","有難蘭若受食戒「弓量」.txt","新衣不作壞色著戒.txt","授具足戒.txt","戒律書畾.adb.ini","戒學答問.html","懺悔的意義.txt","律藏的文獻層次.html","四諍.txt","內觀染著.txt","不受食戒.txt","txtmore.js","taisho.adb.ini","onlytxtmore.js","onlymoretag.js","moretag.js"]
 var ArrLi1=[
 'x-to-h(目錄超連結).txt','x-to-h(目錄超連結2).txt','x-to-h(目錄超連結3).txt','x-to-h(註釋).txt','x-to-h.css','x-to-h.txt'
 ]
@@ -502,6 +502,7 @@ function dt() {
             <input type="button" class="t" value="2022" onclick="MyIni('2022')">
             <input type="button" class="lsg" value="2023" onclick="MyIni('2023')">
             <input type="button" class="da" value="2024" onclick="MyIni('2024')">
+            <input type="button" class="m" value="2025" onclick="MyIni('2025')">
             <!-- <input id="cbr" type="button" class="dc" value="僅文字網頁" onclick="MyIni('t')">
             <input id="pdf" type="button" class="da" value="僅pdf" onclick="MyIni('pdf')">
             <input id="doc" type="button" class="b" value="僅doc" onclick="MyIni('doc')">
