--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -518,6 +518,158 @@ h6 { color:hsl(210,60%,70%);}
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+瑪瑙等七寶需要說淨嗎？
+	10:19 釋成本-02 @釋道中
+	尼大姐的問題，請大德慈悲回覆一下問題？感恩！阿彌陀佛！
+
+	阿彌陀佛！
+	頂禮師父三拜！
+	請問戒法：
+	1、用瑪瑙等七寶做的手珠來念佛，需要說淨嗎？
+	算蓄寶嗎？
+
+	2、有居士供養比丘尼ㄧ個小小的黃金元寶，能說淨蓄寶嗎？還是不可以留在身邊？
+
+	3、未滿70歲的式差尼能受三壇大戒嗎？
+
+	4、沐浴有因緣，需要白浴嗎？
+
+	5、道場在鄉野的聚落中，比丘尼二人結伴出大界，在田野旁的道路散步，需要帶一衣在身？需要白（非時入聚落嗎？）
+
+		1.要說淨！
+
+		《四分》(8,619中)佛言:“若應捉金銀若錢,不離珠瓔珍寶,亦應受五欲. 若受五欲,非沙門釋子法”
+
+		《善見》(15,777下) 1.下至樹膠錢國土所用,皆不得捉,亦不得教人捉,悉犯.
+		若為身捉,尼薩耆.
+
+		《多論》(5,535中)寶者,重寶, 金,銀,摩尼,真珠,珊瑚,車渠,馬瑙,此諸
+		寶若作、若不作,若相、若不相. 作者: 以寶作諸器物. 不作者: 但
+		是寶不作器物.
+		相者: 不作器寶,或作字相,或作印相. 不相者: 不作器寶、字相、
+
+		《四分》(8,619中)錢者, 上有文像.《鈔21,19a》
+
+		《僧祇》(10,311中)自手者, 若身,若身分,若身相續.
+		身者, 一切身. 身分者, 若手,若腳,若肘,若膝.
+		身相續者, 若繫衣,若缽,銅盂中.
+		生色者,金也. 似色者,銀也. 生色似色者,錢等市用物.
+
+		2.一樣要說淨
+		說淨以後，可以放身邊
+
+		3.可以
+
+		《摩訶僧祇律》卷23：「佛具問上事：「汝實爾不？」答言：「實爾。」佛言：「從今日後太老不應與出家。」太老者，過七十、若減七十，不堪造事，臥起須人，是人不聽[19]出家。若過七十能有所作，是亦不聽。年滿七十康健能修習諸業，聽與出家。若太老不應與出家。若已出家者，不應驅出。若度出家受具足者，越比尼罪。是名太老」(CBETA 2024.R3, T22, no. 1425, p. 418b7-14)[19] 出家【大】，〔－〕【宋】【元】【明】【宮】
+
+		4.不到半月洗浴，《四分律》不用白別的比丘
+
+		《薩婆多毘尼毘婆沙》才要白
+
+		《薩婆多毘尼毘婆沙》卷8：「。若無諸因緣，減半月浴者，波逸提。若有因緣，不語餘比丘輒浴者，突吉羅。」(CBETA 2024.R3, T23, no. 1440, p. 557a6-8)
+
+		4.補充：
+		《四分律》不用白別的比丘
+
+		一切有部才要白：
+		《十誦律》：「不語餘比丘輒浴者。突吉羅」( 大正 23p110b )
+		《薩婆多毘尼毘婆沙》：「若有因緣。不語餘比丘輒浴者。突吉
+		羅。」( 大正 23p557a )
+
+		5.這要看你所在的位置是不是村莊聚落，如果是村莊的話，那麼就要白：非時候入聚落。
+
+		如果已經在村莊聚落裡面就不用。
+
+		如果整間寺院在村莊裡面，那麼出大門，他就應該要白
+
+		《四分律》卷41：「佛言：「不應不著割截衣入聚落。」(CBETA 2024.R3, T22, no. 1428, p. 863a21-22)
+
+偷竊賓館鑰匙？
+	20:35 SDH 請問法師，前天發生以下一件事:
+	2尼出門，臨時租住了間賓館:
+
+	a尼，晚上脾氣，b尼不睬她，坐在書桌位置。
+	隔段時間，這a尼突然帶背囊，然後拔掉房間的電子門鎖咭，準備出去，於是房間全部停電!（房間電子咭，是屬b尼，她巳付款200元，之前也告訴a尼，這插房咭是管理全房的電）
+
+	b尼發現無電，轉身見到a尼拿咭走出去，於是立即截她的行為，也喝她不能取走房咭，一直追她近到大堂門口，但a尼仍不交還，而且用手也抓傷b尼。
+	b尼告訴a尼，這行為不問自取，咭有主人，有心取他人物，巳離房間原處，再出離開大堂，會犯偷盜戒，切勿這樣做……
+	a尼回應，她知道，於是仍要堅持出大堂門口，b尼請求她很久，也告訴她有閉路電視，她這行為不得，終於a尼才回入房間。
+
+	20:35 SDH 第二天，那a尼走了，掉b尼在房。
+	20:35 SDH 本來b尼想立即請法師開示，但那尼說她學戒大過b尼十多年，無犯，後來也傳訊息說，她問過幾位學戒法師，都說她不犯盜戒，（不知道她如何問，有否說清楚）請問以上情況，a尼是否屬實犯?
+
+		21:07 釋道中 你講的很模糊啊，搞不太懂這是什麼情況，
+		大概就是，如果你要說他有偷竊……要偷竊什麼東西？，
+
+		偷竊房間？偷竊電？還是偷竊鑰匙？
+
+		。如果祇有偷竊鑰匙的話，那就算鑰匙多少錢？來判斷他是否有中品上品下品的罪，
+
+		但是如果是他把鑰匙拿回去給大堂的經理，那並沒有偷走什麼東西。
+
+		付錢的人再去找經理，把鑰匙重新拿回來就好了。
+		21:10 釋道中 他是偷走？還是衹是不給他用？如果衹是暫時不給他用的話。
+		https://cbetaonline.dila.edu.tw/zh/T22n1428_p0676a02
+		21:10 釋道中 戒條 藏他衣缽戒 波逸提
+
+	23:29 SDH 鑰匙電子咭，200元港幣 a尼未經b伴尼同意，取走，咭是屬於b尼，只有1張，a不是交大堂，是想自己保管這張咭，然後出大堂，往街走走。
+
+		08:15 釋道中 那你就是看他想暫時拿走？……還是想永遠偷走？
+		，如果想偷走，那就看那個鑰匙多少錢來算吧，
+
+		200元港幣乘以4=800元臺币
+
+		還沒有破戒，現在大概破戒要3000元臺币，大概700港幣以上才會破戒。
+
+		《善見律毘婆沙》：「
+		　　　　　　┌五錢波羅夷，
+		盜戒有三罪者┼四錢偷蘭遮，
+		　　　　　　└三錢乃至一錢突吉羅，
+		是名盜三罪。」( 大正 24p799b )
+
+		《薩婆多毘尼毘婆沙》：「
+		　　　　　　┌從始發足步步。輕偷蘭遮。
+		欲取五錢已上┼乃至選擇取三錢已還。得輕偷蘭。
+		　　　　　　└四錢成重偷蘭。
+		若取一錢乃至四錢┬亦從始發足乃至取三錢。亦輕偷蘭。
+		　　　　　　　　└得四錢重偷蘭。
+
+		p614
+		　　　　　　　　　　┌有主┬有主想→波羅夷
+		　　┌得五錢，過五錢┤　　└有主疑→偷蘭遮
+		　　│　　　　　　　└無主┬有主想→偷蘭遮
+		　　│　　　　　　　　　　└無主疑→偷蘭遮
+		境想┤
+		　　│　　　　┌有主┬有主想→偷蘭遮
+		　　└得減五錢┤　　└有主疑→突吉羅
+		　　　　　　　└無主┬有主想→突吉羅
+		　　　　　　　　　　└無主疑→突吉羅
+
+		09:57 釋道中 按照你說的那個鑰匙，200元港幣，大概就是。140元港幣等於一錢，
+
+		所以她如果確定想偷竊，那麼就是。輕偷蘭
+
+		如果他衹是暫時拿走，那麼沒有罪過。沒有犯戒！
+		10:00 釋道中 輕偷蘭，對一位比丘尼懺悔即可，
+
+		至於那個鑰匙。
+		當然應該要按照原來的價格賠錢的。
+		不然，懺悔了！還是有因果報應
+
+亡僧物中：四藥，跟盡形壽藥(終身藥)？是輕？是重？
+
+	《量處輕重儀》卷1：「對病四藥如上列名餘之三藥如上入重。盡形藥中如後正斷。……。盡形藥中未擣治者入重。若已擣和合成湯丸膏煎異本藥相者。及服殘餘分。此實非所幸。宜準僧祇入輕分之」(CBETA 2024.R3, T45, no. 1895, p. 842a27-b6)
+
+	《四分律刪繁補闕行事鈔》卷3：「四藥者。無問生熟穀米、飯醬、湯丸、膏煎，並入重；雖有殘宿、惡觸，亦無有失。」(CBETA 2024.R3, T40, no. 1804, p. 115c10-11)
+
+	《四分律行事鈔資持記》卷3：「穀米等是時藥，湯[3]九等通餘三藥，據文竝重。準儀文：盡形藥未擣治者入重；若已擣和成丸散，及服殘餘者，入輕分。雖下，顯淨。論云：心斷清淨者，故知食境，本非穢故。」(CBETA 2024.R3, T40, no. 1805, p. 375b28-c3)[3] 九【大】，丸【甲】
+
+亡僧物中：經書是輕？是重？
+
+	《毘尼母經》卷3：「復有所不應分物。何者？存在時所有經律，應分處與能讀誦者。若不及分處，現前僧應與能讀誦者，此物不應分賣也」(CBETA 2024.R3, T24, no. 1463, p. 816a5-7)
+
+	《四分律刪繁補闕行事鈔》卷3：「《毘尼母》云：經律先有付囑處，即付彼；若無付囑，隨能受持者與之，不應分賣也。俗書素畫入重；紙筆墨等準入輕，以堪附道法故。」(CBETA 2024.R3, T40, no. 1804, p. 115b23-26)
+
 請問法師，羊毛的衣服或用品，我們可以穿嗎？
 
 	可以
