add boddhisata sila && upload JY && .adb.ini

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -461,11 +461,13 @@ window.onload = function () {
 					if (Arr1[i].charAt(k + 1) != '\t' && Arr1[i].charAt(k + 1) != '　') {
 						if (Arr1[i].charAt(k) == '\t') {
 							Arr1[i] = Arr1[i].replace(Arr1[i].charAt(k + 1), '<h' + j + '>' + Arr1[i].charAt(k + 1)) + '</h' + j + '>'
+							// 改到這個循環完畢再++
 							// j++
 						}
 						// 新行歸零條件
 						if (Arr1[i].charAt(k) != '\t' && Arr1[i].charAt(k) != ' ' && Arr1[i].charAt(k) != '　' && Arr1[i].charAt(k) != '\n' && Arr1[i].charAt(k) != '') {
-							j = 3
+							// 不必歸零
+							// j = 3
 						}
 					}
 					// } else if (tab4p == '4') {
@@ -518,6 +520,115 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+受八關齋戒時，有在網路臉書點擊讚，但是無心聽取裡面音樂，這樣算是犯了歌舞伎樂這條戒嗎，以及還是只要聽見裡面有播放音樂就算是犯了嗎，
+	以及第二是最近我有被施一下法術，如降術之類的法，我以觀想男女淫慾來要破這個法，破這個施法者，這樣有算是犯了非梵行嗎，
+
+	以及法術有法可以破這個邪術嗎，。謝謝法師阿彌陀佛
+
+	17:28 小連 因為這個邪術干擾我有一陣子了。謝謝法師 阿彌陀佛
+	17:52 小連 以及請問法師 
+	受八關齋戒是只能受一日一夜，
+	還是一下子可以受多日多夜呢，
+	我是最近有自受八關齋戒，
+	以及我聽他人說受八關齋戒是ㄧ日受完，無法一次受多日，說是
+	明日還要在自受一次從來才算呢。還請求法師開示
+	17:52 小連 阿彌陀佛
+	18:11 小連 以及因為最近有被人用咒術或是降術，爾在對應時時時觀想如何講他碎撕萬段，這樣我算是有犯殺生嗎，以及在對應時我咒罵對方三字經，是否有毀犯不惡口，還請法師開示
+	18:18 小連 三字經是用觀想罵的，
+	殺死他們兩個也是用觀想去實行的還是請法師開示
+
+		2025.03.24 星期一
+		19:13 釋道中 「無心聽取裡面音樂」。不小心聽到的，不犯，
+		但若心中故意去注意音樂，就犯
+		19:14 釋道中 「觀想男女淫慾」，只是心中想，不犯
+		19:17 釋道中 佛教中，無「觀想男女淫慾」，來破邪法。
+		婬欲，全部是不善法，一點都不可以在心中生起
+		19:21 釋道中 八關齋戒，可以一次多受幾日，
+		也可以每天自己在佛前受，
+		
+		這是部派的解釋不同，有些部派說只能受一日，有些部派說可以多受幾日
+		19:25 釋道中 「觀想如何講他碎撕萬段」
+		，心中想不犯戒
+		19:27 釋道中 心中想的：惡口、殺心…不犯戒
+		但是，是惡業，要向佛菩薩前懺悔即可
+		19:28 釋道中 不可能用殺心、婬心，來破邪法，
+		惡法，是不可能修出善法的
+
+一比丘尼問說：比丘尼只能受一次戒，捨戒後只能當沙彌尼，是何出處？阿彌陀佛！
+	
+	《根本說一切有部毘奈耶雜事》卷30：「
+	從今已去諸還俗尼更不得出家。其長者等善為譏笑損壞我法，是故苾芻尼一捨法服已歸俗者，不應更令出家。若與出家者，師主得越法罪。」(CBETA 2024.R2, T24, no. 1451, p. 352b16-20)
+
+	《摩訶僧祇律》卷30〈比丘僧戒法．8 雜誦跋渠法〉：「本曾受具足不？」[7]若言：「曾受。」應語：「去！不得受具足。」」(CBETA 2024.R2, T22, no. 1425, p. 472b4-5)[7] 若【大】，答【宋】【元】【明】【宮】【聖】。　
+
+	《根本說一切有部百一羯磨》卷2：「
+	如言：『我曾出家。』者，報云：『汝去！無尼歸俗重許出家。』」(CBETA 2024.R2, T24, no. 1453, p. 462a3-4)
+
+	《曇無德律部雜羯磨》：「
+	汝不曾作比丘尼不。」( 大正 22p1048c )
+
+	《十誦律》：「
+	如佛說。比丘尼若捨戒。更不得受戒。頗有比丘尼捨戒更與受戒不犯耶。佛言。有。若比丘尼捨戒已。轉根作男子。與受戒者不犯」( 大正 23p377c )
+	
+一比丘尼問說：有一比丘尼北傳還俗，但是又在南傳出家當比丘尼？可以這樣嗎？
+
+	不可以，比丘尼祇有出家一次
+
+	除非她認為之前不得戒，要重新受戒……但是她是還俗，就是認為有得戒……所以不可以再作比丘尼
+
+南傳是戒律怎麼說？應該是一致的吧？  第二南傳不承認北傳問題是否也認為只能一次不成立？
+	南傳也是說比丘尼祇可以出家一次
+
+	衹是說：南傳認為你之前出家不算數，因為他不承認北傳有比丘尼，所以你之前的出家，在他們眼中不算是出家，是剃頭的居士，在南傳出家才算第一次出家
+
+南傳有比丘尼嗎？他們不是都八戒女？
+	現在的斯裡蘭卡以及澳大利亞，有南傳比丘尼
+	如果是八戒尼，十戒尼，……那就沒有次數的限制，也沒有身份的限制，
+	甚至不用考慮十三重難，因為不是出家五眾，
+	就不在這個討論的範圍之內。
+	八戒尼，十戒尼，
+	不是佛陀制定的戒，就像世間一般的五戒
+	所以沒有身份的限制。
+
+款卡或是手機儲值，不用領現金，可直接將提款卡或手機說淨，能成就嗎？
+	可以，副院長說可以。
+
+請問法師 受八戒時，過午時後，有嘔吐後喉嚨有一些於食，有在吞嚥下去，這樣算是非時食嗎， 就是類是綠豆湯小粉末
+	已經吐出喉嚨的，再吃回去就犯
+
+	如果還沒有吐出喉嚨，吞下去沒有犯
+
+在不持戒的道場如何誦戒？如何守四獨戒？
+	21:51 SDH 請教法師🙏
+	尼準備到某寺院入職，但有以下2個問題，請法師開示(please)
+	1，那寺的尼不是半月誦戒的，本尼想自行誦戒，可以嗎？是否需要關閉門，才可以誦呢？
+	2，那寺是每人1間竂房的，而本尼仍想繼續持二篇，晚上可否躺下只睡幾小時，然後明相出之前，起身做香燈職事?這樣會否犯正（獨宿）?
+	或是，有什麼其它辦法，主要不犯正獨宿，只犯下蘭之類嗎？
+	請幫忙想一下解決辦法(？)(？)
+
+		18:46 釋道中 
+		1．有結過大界則可到界外：一人心念、二～三人對首、或四人以上結小界。
+		2．無結界則同自然界，但不同一個建築物（乃至寮房）內可行心念及對首。
+
+		白天睡不犯，晚上躺下就犯
+		但犯多少？
+		1 四分律。躺下就犯僧殘
+		2 僧祇律、五分律。明相出以前起床，犯偷蘭
+		3 有部律。在寺院睡犯波逸提，在俗家睡犯僧殘
+		
+			《四分律》（大正720Ｃ）：「若比丘尼，獨渡水、獨入村、獨宿、獨在後行犯僧殘。（721） 彼比丘尼共應在舒手相及處，彼比丘尼獨宿，隨脅著地，僧殘
+			
+			《僧祇律》（大正519Ａ）：「若比丘尼離比丘尼一夜宿，除餘時，餘時者：若病時，賊亂圍城時，是名餘時。是法初罪。一夜宿者，日未沒至明相出。若比丘尼離比丘尼宿，日未沒至明相出，僧殘。日沒以（後）離至明相出，偷蘭。
+			
+			《五分律》（大正809）：「若比丘尼獨行、獨宿、獨渡水，於道中獨在後染著男子，除因緣，是尼初犯僧殘，可悔過。（緣起：諸尼獨宿，失衣缽，破梵行）若宿時應使手相及，若不相及，初夜及中夜，蘭；明相出，僧殘
+			
+			《根有毗奈耶》（大正935Ａ）：「若復比丘尼獨從尼寺向餘處宿者，僧殘。獨者，謂更無伴。餘處宿者，謂離本寺向他家宿。」（未說共伸手之情形如何）
+			（大正1000Ａ）：「若復比丘尼獨住（在）一房者，波逸提。獨住一房者，謂無第二尼宿經夜，墮罪同前，及至宿者，皆得墮罪。」（緣起在寺中）
+			區別村中與寺內獨宿兩戒，特指離寺至村中獨宿才犯殘，不同於其他各律。
+
+		第二個問題，你應該好好看本因法師的《四分比丘尼戒相表記講義》，你常常問四獨戒，就是沒有好好看清楚，才無法判斷犯戒否？也無法知道如何做！
+		所以要好好看《四分比丘尼戒相表記講義》裡面的四獨戒部份
+	
 獨行戒住在賓館
 	20:03 釋道中 有一位香港比丘尼，問獨行戒…「答」是我的回答，
 
