upload JY && .adb.ini

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,6 +520,18 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+阿彌陀佛！弟子問疑？我們為什麼要拜梁皇？
+	因為要懺悔業障，還有祈求福報。
+
+若只有兩位比丘尼共住，故所有道場內的東西、食物事先溝通好都任用（施主意是給法師任用），這樣的話，是不是就沒有僧物、常住物的問題？感恩🙏師父
+	第1點，你這個寺廟，如果有公開化緣的，就算是常住物，裡面的東西還是屬於常住
+	如果是自己出錢買的，自己的房子，那就是私人物。
+	裡面的東西就是私人物的方式處理。
+
+	第2點，如果是一般的食物跟物品，如果確定都是供眾的物品，那就都是現前物，那就不需要打板。可以大家自己拿。
+
+	第3點，如果是放在冰箱的食物，一般的米跟菜，要去使用常住的瓦斯爐來煮的話，應該還是常住物，還是要打板一下。……除非你們說整個冰箱都是供衆物。
+
 受八關齋戒時，有在網路臉書點擊讚，但是無心聽取裡面音樂，這樣算是犯了歌舞伎樂這條戒嗎，以及還是只要聽見裡面有播放音樂就算是犯了嗎，
 	以及第二是最近我有被施一下法術，如降術之類的法，我以觀想男女淫慾來要破這個法，破這個施法者，這樣有算是犯了非梵行嗎，
 
