upload JY && .adb.ini

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,6 +520,26 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+居士犯到五戒可以重受五戒嗎？
+	可以，
+
+	若犯上品罪，按副院長的說法，比照菩薩戒的懺悔法來懺悔，每日拜千佛、拜懺…有見光見華即滅罪，
+	若無見光見華，拜滿一年，即可重新去受戒
+
+	中下品罪，對一比丘懺悔即可
+
+	《CBETA 電子佛典集成 April 2011\大正新修大藏經\律部三\佛阿毘曇經出家相品(p.T982.1)》：「
+		問五戒盡得悔不。答若殺人。婬其所尊及比丘尼。盜三尊財。盡不得悔。餘得悔。」
+
+	南傳的看法是：《帕奧禪師\正念之道\問答類編》：「
+		問21：受五戒或八戒之後，若犯邪婬或婬等戒，要如何懺悔？未來可否再受五戒、八戒或出家戒？若修行是否能夠證得禪那與道果？
+
+		答21：他不需要懺悔，而只需要重新受戒。他可以出家為沙彌或比丘，也能夠證得禪那及阿羅漢果，就好像在出家前殺了許多人的指蔓，在成為比丘之後仍然能夠證得阿羅漢果。
+
+		問22：犯四根本戒之一的比丘，成居士後，可否受五戒、八戒等？若修行是否能夠證得禪那與道果？
+
+		答22：他可以受五戒或八戒，若修行的話也能夠證得禪那與道果。
+
 阿彌陀佛！弟子問疑？我們為什麼要拜梁皇？
 	因為要懺悔業障，還有祈求福報。
 
@@ -823,7 +843,7 @@ window.onload = function () {
 		《薩婆多毘尼毘婆沙》：「若有因緣。不語餘比丘輒浴者。突吉
 		羅。」( 大正 23p557a )
 
-		5.這要看你所在的位置是不是村莊聚落，如果是村莊的話，那麼就要白：非時候入聚落。
+		5.這要看你所在的位置是不是村莊聚落，如果是村莊的話，那麼就要白：非時入聚落。
 
 		如果已經在村莊聚落裡面就不用。
 
@@ -1554,7 +1574,7 @@ window.onload = function () {
 	。願大德（姊）憶我！（一說）懺悔主：自責汝心，生厭離！　求懺者：爾！（一拜問訊）
 
 圓滿自恣日，可以找任何一位比丘尼，都可以做對首法
-	感恩法師慈悲開示(hands put together)仍有些少想確實了解以下:🙏
+	感恩法師慈悲開示🙏仍有些少想確實了解以下:🙏
 	（2）所以照常十五禮僧足?
 	但今年尼是十七才開始安居，十五日那天是未完全安居圓滿，可以照舊禮僧足嗎？
 
@@ -5909,7 +5929,7 @@ window.onload = function () {
 	已經死掉，或是已經從根部斷裂，離開他原本的樹枝或是根部，那就沒有關係了，不會犯戒。
 
 	因為那就算他已經死掉了，死掉的東西是沒有關係的，因為就沒有生命了，沒有生命你就不能再殺他了。
-	09:37	SDH	感恩法師(hands put together)慈悲開示
+	09:37	SDH	感恩法師🙏慈悲開示
 
 ＠獨行或村中獨行一界
 	09:31	SDH	[照片]
@@ -5917,7 +5937,7 @@ window.onload = function () {
 
 	1) 尼1人，從寮房A樓層（有樓梯往上往下） 想去寮房B 或大殿，（不知有尼或女眾否）會犯獨行或村中獨行一界嗎？嗎？（寺院有男居士住）
 
-	09:33	SDH	如果無男居士呢？(hands put together)
+	09:33	SDH	如果無男居士呢？🙏
 	09:34	釋道中	《戒律書畾\律學釋疑\律學釋疑》：「
 	獨行一界中之「一界」定義為何？
 	答：「一界」在《尼鈔》卷四P5準此若一坊內獨行，及一家獨行，但得吉羅也。「一坊」者，如市坊、作坊等。見四獨戒總綱之說明。」
@@ -5949,7 +5969,7 @@ window.onload = function () {
 	09:40	釋道中	男居士的房間，才算是村莊的聚落界。村莊指的是：一般男人女人居住的地方。
 
 ＠香港曾帶1至2人做對首安居
-	17:34	SDH	請教法師(hands put together)
+	17:34	SDH	請教法師🙏
 
 	有間中國寺廟，今年剛上月，這和尚尼帶一班徒弟懺 了摩那埵二篇，我也那時候認識她們。
 
@@ -5960,11 +5980,11 @@ window.onload = function () {
 	在香港曾帶1至2人做對首安居而已，也是請南普陀寺為依止戒和尚。
 
 	現在學人有想幫忙，但只是信心未足情況下，可否把重任承擔呢？
-	學尼講國語不好，所以用文字來請開示，請原諒(hands put together)
+	學尼講國語不好，所以用文字來請開示，請原諒🙏
 
 	17:35	SDH	可否有簡單的儀式，和讀文？
 	17:35	SDH	開始是要爐香讚，……要否分房羯磨等
-	17:35	SDH	若果法師認為學尼不適宜承擔此重任，那學人會照以往做3人以下對首安居，請法師開示(hands put together)
+	17:35	SDH	若果法師認為學尼不適宜承擔此重任，那學人會照以往做3人以下對首安居，請法師開示🙏
 	17:35	SDH	如果可以。承擔，請法師詳細教引
 	17:35	SDH	[照片]
 	17:35	SDH	例如步驟程序:
@@ -6051,10 +6071,10 @@ window.onload = function () {
 
 	（b） 有些尼要4月26日才能回到寺院的話，那應該是前/中/後 安居呢？文是否一樣？
 
-	弟子學尼，也是在學習中，慚愧不懂之處甚多，請法師慈悲見諒，指導學尼，感恩大德(hands put together)
+	弟子學尼，也是在學習中，慚愧不懂之處甚多，請法師慈悲見諒，指導學尼，感恩大德🙏
 
 	13:17	SDH	如果太繁複，學尼去另外別處，另找尼做安居
-	13:18	SDH	請法師開示(hands put together)(hands put together)(hands put together)
+	13:18	SDH	請法師開示🙏🙏🙏
 	16:30	釋道中	:是依大界。
 
 	很好
@@ -6117,7 +6137,7 @@ window.onload = function () {
 	只是部派不同的名字不同。
 	按四分律，念「後安居」即可
 
-	弟子學尼，也是在學習中，慚愧不懂之處甚多，請法師慈悲見諒，指導學尼，感恩大德(hands put together)
+	弟子學尼，也是在學習中，慚愧不懂之處甚多，請法師慈悲見諒，指導學尼，感恩大德🙏
 
 	我看你們的問題那麼多，：你們根本不太懂安居法！
 	戒律必須整套學習，不是問一點，看一點…就能懂的，
@@ -6159,7 +6179,7 @@ window.onload = function () {
 	20:10	SDH	[貼圖]
 	20:13	SDH	[貼圖]
 
-	有2間寺院/精舍，都是獨尼，由於她各依止和尚是不同，請問(hands put together)
+	有2間寺院/精舍，都是獨尼，由於她各依止和尚是不同，請問🙏
 
 ＠（1）大家可否在某尼精舍，一分別不同日子，各自請依止律師呢？然後幫對方做對首法？
 
@@ -6223,7 +6243,7 @@ window.onload = function () {
 	有疑的人，自己懺悔即可
 	09:35	釋道中	還有：若早齋食肉，午齋又吃飯，犯數數食
 	21:45	SDH	感恩法師慈悲，資料豐富，增益良(thankyou)(thankyou)(thankyou)
-	21:46	SDH	增益良多(hands put together)
+	21:46	SDH	增益良多🙏
 
 ＠ 尼與居士共宿一天，
 	（1）是犯與未受戒共宿未過三夜,對嗎？ （2）以上，如果這尼，在明相出之前起床，請問是犯？
@@ -6253,8 +6273,8 @@ window.onload = function () {
 	可否做盡形壽藥？
 	（2）五榖粉，38榖粉之類，如果早上沖飲的話，會當正餐嗎？
 	（3）維生素8群之類葯片，
-	a)可否做盡形壽藥呢？
-	b) 如果未做盡形壽藥，有需要時，下午可否找居士做手受，48分鐘內即服呢？
+	(a)可否做盡形壽藥呢？
+	(b) 如果未做盡形壽藥，有需要時，下午可否找居士做手受，48分鐘內即服呢？
 
 	請法師開示🙏
 	17:10	SDH	[照片]
@@ -6263,8 +6283,8 @@ window.onload = function () {
 	可否做盡形壽藥？
 	（2）五榖粉，38榖粉之類，如果早上沖飲的話，會當正餐嗎？
 	（3）維生素8群之類葯片，
-	a)可否做盡形壽藥呢？
-	b) 如果未做盡形壽藥，有需要時，下午可否找居士做手受，48分鐘內即服呢？
+	(a)可否做盡形壽藥呢？
+	(b) 如果未做盡形壽藥，有需要時，下午可否找居士做手受，48分鐘內即服呢？
 
 	請法師開示🙏
 	18:40	釋道中	（1）請問以上的蛋白素，
@@ -6279,11 +6299,11 @@ window.onload = function () {
 	已經磨成粉的就不算 ，細末食，不算是5正食
 
 	（3）維生素8群之類葯片，
-	a)可否做盡形壽藥呢？
+	(a)可否做盡形壽藥呢？
 
 		可以
 
-	b) 如果未做盡形壽藥，有需要時，下午可否找居士做手受，48分鐘內即服呢？
+	(b) 如果未做盡形壽藥，有需要時，下午可否找居士做手受，48分鐘內即服呢？
 
 		可以
 
@@ -6331,7 +6351,7 @@ window.onload = function () {
 	20:11	釋道中	長衣，10天之內如果：丟掉了、被偷走了、被燒、損壞了……，都沒有犯戒。
 
 ＠遺失戒碟
-	16:47	SDH	請問法師(hands put together)有尼在出門途中時，發現遺失戒碟，應怎辦？
+	16:47	SDH	請問法師🙏有尼在出門途中時，發現遺失戒碟，應怎辦？
 	17:37	釋道中	去找啊！
 
 	不然去找警察啊！
@@ -6344,7 +6364,7 @@ window.onload = function () {
 	17:18	釋道中	有台灣，是找佛教會補發，佛教會的電腦中有資料，就會補發。
 	17:40	釋道中
 	2023/9/10（週日）
-	20:18	SDH	昨天巳先報失，未知可否再補發正本呢？(Unity)(hands put together)
+	20:18	SDH	昨天巳先報失，未知可否再補發正本呢？(Unity)🙏
 	20:18	SDH	是2017年，在於馬來西亞，當時是上宗下興和尚，及義德寺和尚尼，及一批台灣大德，三壇大戒。
 	22:29	釋道中	要問佛教會
 
@@ -6597,7 +6617,6 @@ window.onload = function () {
 ＠安居處的精舍無大界
 	13:36	SDH	另外，安居處的精舍，有或無大界，都可以2尼互相作對首，對嗎？
 	20:25	釋道中	可以對首安居。只要白：「今依XX僧伽藍，前三月夏安居」即可
-	20:25	釋道中	可以對首安居。只要白：「今依XX僧伽藍，前三月夏安居」即可
 	21:06	SDH	[貼圖]
 
 ＠（1）比丘尼能否開騎摩托車？
@@ -6796,7 +6815,7 @@ window.onload = function () {
 
 	請依止律師的文：
 	大德一心念！
-	梅繆帕奧禪林僧伽藍比丘尼僧合和，今口差我某甲比丘尼求大德為我等作安居依止律師，願大德為我等作安居依止律師，我等依止作安居。慈湣故。（三說，第三遍，大慈湣故。）
+	梅繆帕奧禪林僧伽藍比丘尼僧合和，今口差我某甲比丘尼求大德為我等作安居依止律師，願大德為我等作安居依止律師，我等依止作安居。慈愍故。（三說，第三遍，大慈愍故。）
 
 	3，如果不用說文只是去頂禮
 	可否2人作為代表去？
@@ -6828,7 +6847,7 @@ window.onload = function () {
 	我認為，衹要告訴律師，你們幾位想要安居的人名字就可以了，……想安居的，個人個人自己成就依止。不安居的，就不管他了……
 	這樣不會變成破僧。
 	22:11	釋道中	，禮請依止律師，　文雲：「大德一心念！某處比丘尼僧和合，今請大　德為我等作夏安居
-	依止律師，願大德為我等作夏安　居依止律師，我等依大德故，得如法夏安居，慈湣　故。」
+	依止律師，願大德為我等作夏安　居依止律師，我等依大德故，得如法夏安居，慈愍　故。」
 	（跪白三說）　師言：「善。」答：「爾。」
 	22:14	釋道中	就把「某處比丘尼僧和合，」，改為「甲乙丙丁比丘尼」
 	22:20	shijinyan 	法師吉祥:
@@ -6850,7 +6869,7 @@ window.onload = function () {
 	還有二位不知有沒有安居
 	還有一位有安居，可能不請依止律師。比丘尼一共12位。
 
-	《破僧，不是一個比丘尼僧團，破為二部，各自說戒，羯磨嗎？
+	《破僧》，不是一個比丘尼僧團，破為二部，各自說戒，羯磨嗎？
 	我們這裏本身也不是一個比丘尼僧團啊，其他的比丘尼也沒有一起作法啥的。但的確再說僧合和也不合適。
 
 	因為之前幾年人多的時候疊的文是「某處比丘尼僧合和」
@@ -7493,7 +7512,7 @@ window.onload = function () {
 
 	居士說:
 
-	禮敬bhante[合十][合十][合十]弟子以前對眾生修慈心時總是一遍遍念七類眾生名號而沒有真正升起慈心，昨天弟子慈心禪，我先是憶念所有眾生對自己這個生命的支持而升起感恩心，並由此不斷升起對一切眾生慈愛的心，慢慢的我感覺整個人很輕盈，身體沒有了，肩膀也不痛了，我忽然體悟到我所認知感受的一切外在的眾生同自己內在眾生是一體的無二無別的，一切眾生包括親人朋友老師敵人，天人鬼類非人動物和植物和地水火風元素都是構建自己這個生命的支撐，這樣感覺對眾生慈愛許多，不知這樣修對不對？修慈心最終目的是什麼呢？怎樣修才能達到三禪呢？[合十][合十][合十]
+	禮敬bhante🙏🙏🙏弟子以前對眾生修慈心時總是一遍遍念七類眾生名號而沒有真正升起慈心，昨天弟子慈心禪，我先是憶念所有眾生對自己這個生命的支持而升起感恩心，並由此不斷升起對一切眾生慈愛的心，慢慢的我感覺整個人很輕盈，身體沒有了，肩膀也不痛了，我忽然體悟到我所認知感受的一切外在的眾生同自己內在眾生是一體的無二無別的，一切眾生包括親人朋友老師敵人，天人鬼類非人動物和植物和地水火風元素都是構建自己這個生命的支撐，這樣感覺對眾生慈愛許多，不知這樣修對不對？修慈心最終目的是什麼呢？怎樣修才能達到三禪呢？🙏🙏🙏
 
 	尊者答:
 	「我忽然體悟到我所認知感受的一切外在的眾生同自己內在眾生是一體的無二無別的，一切眾生…，都是構建自己這個生命的支撐」—— 每一生命個體都有各自不同的名色相續，都有各自不同的業和業報。「無二無別」是「梵我一體」的翻版，是婆羅門教之如來藏思想。[微笑]
@@ -7508,11 +7527,9 @@ window.onload = function () {
 
 	第 43 頁
 
-	佛教的「如來藏」思想和婆羅門教的「我」的[font=宋體]觀念在各自理論體系中都占有重要地位。從古代到近現代,都有人認為二者相當或類似。但筆者認為,從上面的考察中可以看出,盡管兩者間有某些共同之處,但它們的差別更為突出,更應引起人們注意。以下對二者的同異做一些歸納或分析。
+	佛教的「如來藏」思想和婆羅門教的「我」的觀念在各自理論體系中都占有重要地位。從古代到近現代,都有人認為二者相當或類似。但筆者認為,從上面的考察中可以看出,盡管兩者間有某些共同之處,但它們的差別更為突出,更應引起人們注意。以下對二者的同異做一些歸納或分析。
 
-	[/font]
-
-	[font=宋體]二者同的方面主要表現在以下幾點上:
+	二者同的方面主要表現在以下幾點上:
 
 	第一,佛教的如來藏與事物的生滅有關聯(
 
@@ -7528,11 +7545,11 @@ window.onload = function () {
 
 	第四,佛教的如來藏在一些佛典中被認為是一種不可思議的境界(如在《勝鬘經》中) ,這種境界一般的凡夫難以認識(如在《楞伽經》中) 。婆羅門教中的大我也同樣被認為是不可描述的實在,這種實在也被說成是用一般的認識觀念不能把握的(如在奧義書和吠檀多派中) 。
 
-	[/font]
+	
 
 	第 46 頁
 
-	[font=宋體]二者異的方面則主要表現在以下幾點上:
+	二者異的方面則主要表現在以下幾點上:
 
 	第一,佛教的如來藏雖然在不少佛典中被說成是常住不變的,但它卻很難說是一個確定的實體或主體,因為佛教的理論體系的基本特點是強調緣起觀,認為事物是由因緣關系和合而成的,其中沒有一個真正實在的根本因或本體,而如來藏的所謂常住性主要是指其作為佛教真理的確定性,而且即便是這一點,在不同佛典中的見解也不一樣。而婆羅門教的大我則是一個確定的實體或本體,它是一切事物的根本,是物質現象和精神現象的根本因,萬有在
 
@@ -7870,7 +7887,7 @@ window.onload = function () {
 	07:53	釋道中	三大姊一心念！今日眾僧自恣，我某甲比丘尼清淨。三說
 
 ＠在緬甸差二位五德人
-	17:28	shijinyan 	法師吉祥[合十][合十][合十]
+	17:28	shijinyan 	法師吉祥🙏🙏🙏
 	1，
 	請問法師，您有整理好的罪相嗎？
 
@@ -7881,7 +7898,7 @@ window.onload = function () {
 
 	僧今…何所作為？
 	差受自恣人羯磨》
-	弟子錦彥頂禮[合十][合十][合十]
+	弟子錦彥頂禮🙏🙏🙏
 	17:34	shijinyan 	請問法師，
 	五德人作白僧自恣結磨
 	之前，是否需要所欲問和？
@@ -7940,7 +7957,7 @@ window.onload = function () {
 
 	2，是否可以口頭對依止律師說，「請您作安居依止律師」？
 	還是按以下的去說
-	大德一心念！梅繆帕奧禪林僧伽藍比丘尼錦彥、法瀚、樂修，求大德為我等作安居依止律師，願大德為我等作安居依止律師，我等依止作安居。慈湣故。（三說，第三遍，大慈湣故。）
+	大德一心念！梅繆帕奧禪林僧伽藍比丘尼錦彥、法瀚、樂修，求大德為我等作安居依止律師，願大德為我等作安居依止律師，我等依止作安居。慈愍故。（三說，第三遍，大慈愍故。）
 	依止律師：善
 	比丘尼答言：而
 	依止律師：給與教誡
@@ -7956,7 +7973,7 @@ window.onload = function () {
 	3明顯的自然界
 	來安居
 	18:38	釋道中	2儘可能按照律藏的文，
-	「大德一心念！某處比丘尼僧和合，今請大德為我等作夏安居依止律師，願大德為我等作夏安居依止律師，我等依大德故，得如法夏安居，慈湣故。」（跪白三說）師言：「善。」答：「爾。」
+	「大德一心念！某處比丘尼僧和合，今請大德為我等作夏安居依止律師，願大德為我等作夏安居依止律師，我等依大德故，得如法夏安居，慈愍故。」（跪白三說）師言：「善。」答：「爾。」
 
 	應該說「比丘尼僧和合……」
 
@@ -8143,14 +8160,14 @@ window.onload = function () {
 	16:32	張美玉	已經是會動的蚊子幼蟲.我把牠們連水倒掉不知道會不會死.
 
 ＠一界獨行
-	15:34	釋清會	請教法師，(hands put together)
+	15:34	釋清會	請教法師，🙏
 	以上的圖，是某一寺院，有幾個部門樓層，請問:
 
-	1) 尼1人，從寮房A樓層（有樓梯往上往下） 想去寮房B 或大殿，（不知有尼或女眾否）會犯獨行或獨宿嗎？
+	(1) 尼1人，從寮房A樓層（有樓梯往上往下） 想去寮房B 或大殿，（不知有尼或女眾否）會犯獨行或獨宿嗎？
 	15:34	釋清會	[照片]
-	15:34	釋清會	2) 如果其他尼或女眾不在，尼想留在自己寮房A走動，可犯否？
+	15:34	釋清會	(2) 如果其他尼或女眾不在，尼想留在自己寮房A走動，可犯否？
 	15:34	釋清會	本來以為在寺院內，走動不會犯什麼，無走1出界外內，但卻有些說會犯二篇，
-	15:34	釋清會	以上有疑，請法師開示(hands put together)
+	15:34	釋清會	以上有疑，請法師開示🙏
 	19:48	釋道中	《戒律書畾\律學釋疑\律學釋疑》：「
 	獨行一界中之「一界」定義為何？
 	答：「一界」在《尼鈔》卷四P5準此若一坊內獨行，及一家獨行，但得吉羅也。「一坊」者，如市坊、作坊等。見四獨戒總綱之說明。」
@@ -8454,7 +8471,7 @@ window.onload = function () {
 	南無阿彌陀佛
 	16:42	振文	之前已對疏忽未說淨之財寶，有在佛前發露懺悔並補說淨。現在也只能以末學所知道的戒法，先這樣做了。
 	南無阿彌陀佛
-	16:45	振文	師父：上面是道德師line(line)振文，就是上次請問的出家前的海外資產的問題，是否可以用他的方式懺悔即可？(hands put together)
+	16:45	振文	師父：上面是道德師line(line)振文，就是上次請問的出家前的海外資產的問題，是否可以用他的方式懺悔即可？🙏
 	17:12	釋道中	不可以，
 	捨墮，一定要捨棄後，才可以懺悔
 
