upload JY && .adb.ini

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,6 +520,190 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+移夏，怎麼做？
+	18:55 釋道昧 請問法雲師週五早上離開淨苑，搭中午飛機回香港
+
+	法雲師的移夏，是在淨苑做？還是回香港做？
+
+	如果回香港，只有她一位出家人，怎麼做？
+
+		19:16 釋道中 當然是離開淨苑的時候，白告大眾：要移夏
+		19:16 釋道中 到香港以後，再心念安居
+
+	19:17 釋道昧 法雲6月25日會再回淨苑，在香港怎麼做？
+
+	19:21 釋道昧 心念安居，尼無⋯
+
+	這樣怎麼辦？
+
+		19:23 釋道中 一樣，在香港，菩薩前面報告：移夏。
+
+		回來，再對一位比丘尼，安居
+		19:23 釋道中 因為不可以一個人住，但你現在沒辦法，就是按照比丘的文來念
+
+出家眾是否適合去追收功德金？
+	10:17 釋道昧 🔺法雲問：
+
+	弟子有一個疑問，想請師父解答：
+
+	出家眾是否適合去追收功德金？
+
+		18:24 釋道中 真會出難題。我查一下再回復。
+
+		16:15 釋道中 這個問題：
+		衹要不是為自己，為自己不行。
+
+		但是幫別的比丘，或是幫忙常住，是可以的，可以向信徒說這些財務、債務的事情。
+	16:15 釋道昧 感謝法師
+	16:16 釋道昧 請問為什麼「為自己不行」？
+		16:16 釋道中 這個佛陀沒有明文說，但是按照30捨墮，幫別的比丘或是常住，是可以的
+		16:17 釋道中 為了自己就變成「去化緣」，按照捨墮……大部分情況是不行的。
+
+那以後信徒有急的事情打電話通知我們幫忙先做功德，事後再補交。那我們也是可以不幫忙囉
+
+	16:23 釋道中 這個應該分成兩部分來講，第1個：個人來講，菩薩戒，看到有人有痛苦必須要幫忙的，你有能力就必須幫忙。
+
+	而菩薩戒是允許。菩薩去化緣財務來救濟眾生
+
+	16:24 釋道昧 這時候不是用比丘戒去看⋯🙄
+		16:28 釋道中 第2部分。菩薩戒，沒有說寺廟或是僧團要幫忙眾生。
+		我查詢一下，不能用僧團或是寺廟的東西去幫忙，痛苦的眾生。
+		就像是……寫牌位或是做種種的功德。
+
+		所以你說要幫信徒，有災難或痛苦的時候。……寫牌位或是種種功德，那是你個人可以幫忙，但是寺院要不要幫忙帶墊這些款項？那應該不是寺院的工作。
+
+		菩薩戒：通常指的是個人，不是指整個團体要做那些救度眾生的行為。
+
+		雖然寺院不是盈利，但是你這個屬於寺院的金額款項，能不能先借貸？或者是透支……你們自己應該定一個規矩，雖然三寶財物是可以借用的，但是應該要寫清楚……歸還的時候才不會揹負因果。
+	16:33 釋道昧 就是信徒或有災難的人，請寺院先幫忙，如果沒有歸還預借的部分，會有侵損常住的因果～
+	16:33 釋道昧 （我們以前在書記室是這樣被教導的）
+		16:33 釋道中 按照南普陀寺，他們為什麼沒有這個問題，
+
+		因為他沒有任何支出的功德款項，有人往生死亡或是痛苦的病痛的時候，他就打電話來寫功德，那只限於早晚課的回向而已，或是7月中旬的一個法會的牌位，並沒有其他的開支，所以那些都免費的
+
+		那要供養的自己供養，所以他沒有借貸款項的問題或是代墊款項的問題。
+	16:34 釋道昧 這就是戒律道場跟我們這些道場不同的地方～
+		16:35 釋道中 那看你有支出什麼，比如說佛前的酥油燈，那麼真的有花錢買的酥油燈，他不來還那個燈的錢……當然是欠了
+
+		但是一般牌位，到底算不算支出？看你們自己決定了。
+	16:36 釋道昧 還有拜飯菜
+		16:36 釋道中 我知道……有支出的話，他當然要來償還這筆支出。
+
+式叉自恣有2種方法(4種情況)
+
+	1-1：跟比丘尼一起，比丘尼5人以上，差五德人，所有比丘尼自恣後，
+	式叉來五德人前：
+	「大姊一心念！今眾僧自恣日，我式叉摩那亦自恣，若有見聞疑罪，大姊長老哀愍故語我，我若見罪，當如法懺悔。（三說，沙彌尼準說可知。）」
+
+	1-2：若比丘尼不到5人，不差五德人，比丘尼相向自恣後。
+	式叉來僧中：
+	「大姊一心念！今是眾僧自恣日，我式叉摩那尼某甲清淨。（三說）」
+
+	2-1：不跟比丘尼一起。式叉有5人以上，自己自恣
+	式叉中年歲最大的，口差五德人，然後式叉一一來五德人前：
+	「大姊一心念！今眾僧自恣日，我式叉摩那亦自恣，若有見聞疑罪，大姊長老哀愍故語我，我若見罪，當如法懺悔。（三說，沙彌尼準說可知。）」
+
+	2-2：若式叉不到5人，不差五德人，式叉就相向自恣
+	「大姊一心念！今是眾僧自恣日，我式叉摩那尼某甲清淨。（三說）」
+
+	《摩訶僧祇律》卷30〈比丘僧戒法．8 雜誦跋渠法〉：「
+	式叉摩尼至布薩自恣日入僧中，䠒跪合掌作如是言：「阿梨耶僧！我某甲清淨，僧憶念持。」
+	如是三說而去。」
+
+	============
+
+	《毗尼討要》卷3〈受十戒章第三十一〉：「
+	若(沙彌沙彌尼)不滿五人，四人已下對手自恣云：
+
+	大(德姉)一心念。今是眾僧自恣日。我(沙彌沙彌尼)某甲清淨。(三說)
+
+	一人心念云：今是眾僧自恣日。我(沙彌沙彌尼)某甲清淨。(三說)」
+
+	============
+
+	《戒律書畾\四分律比丘尼鈔\四分律比丘尼鈔》：「
+	通行
+	尼自恣已，五德尼喚式叉尼、沙彌尼入僧中，五德尼對前，受自恣。
+
+	大姊一心念！今眾僧自恣日，我式叉摩那亦自恣，若有見聞疑罪，大姊長老哀愍故語我，我若見罪，當如法懺悔。（三說，沙彌尼準說可知。）
+
+	若別
+	自恣，則不須此。對首自恣云：1-58
+
+	大姊一心念！今是眾僧自恣日，我式叉摩那尼某甲清淨。（三說）
+
+	沙彌尼類說可知，不清淨者，發露懺已自恣。」
+
+受籌後的筷子，如何處理？
+	收起來下次用啊。
+
+	或者，你們要拿去做其他用途也可以啊，因為它是屬於僧物，
+
+	不是供佛的物品，所以你看常住要哪裡需要，就拿去用，也無所謂。
+
+受籌前、洗手的八功德水，是否倒掉？可以拿去澆樹嗎？
+	隨便你們處理，這個不是供佛的東西，
+	順便你們想要怎麼處理都可以。
+
+三十七道品
+	道中法師吉祥，這兩個禮拜聽了法師所講的四分律比丘尼戒本講記，心中很法喜。在課後研討中，群組有幾個問題想請教您：
+
+	1. 文中提到學戒同時學習三十七道品，就可以戒定慧三學增上。三十七道品的八正道的第一個是正見，是聖人的無分別智，能契入平等法性。弟子們想在大小乘經典的引導下學習戒法，但對於三十七道品不熟悉，可否請法師在這方面引導弟子，比方說多開示ㄧ些三十七道品的內容或是實修次第，或是推薦那位法師所講的三十七道品。
+	2. 法師提到受具戒時的觀想並沒有在任何的律藏中看到，應該是出自天台，這表示我們所學的戒法已經在很多方面漢化了。您在南傳禪修方面有經驗，是不是可以跟弟子們略為開示南傳戒定慧三學的行持，讓弟子們能稍稍貼近早期原始佛教乃至部派佛教時期的戒律行持。
+	感恩法師慈悲撥冗指導🙏🙂
+
+		09:01 釋道中 這個37道品，在果清長老的《比丘尼戒講義》，前半段都有講過，前400頁有講，
+
+		但是我的建議：應該先。選擇宗派，
+
+		因為每個宗派解釋的37道品的方向不一樣，
+
+		我所知的幾個方向
+
+		第一，南傳，小乘解脫道的方向解釋
+
+		第二，唯識，從《俱舍論》學習到《瑜伽師地論》
+
+		第三，天臺宗的方向來學習，
+
+		第四，就是密宗，但是密宗要小心，他們龍蛇混雜。
+		09:02 釋道中 你說的方向太過廣大，我的上課時間有限，不可能完整去講述37道品。
+		09:04 釋道中 https://youtu.be/nzT14IUumH0?si=RednL18ynXRaHCJN
+		09:04 釋道中 http://www.dhammarain.org.tw/books/paauk/dhammacakkapavattana-paauk-discouse.htm
+		09:04 釋道中 帕奧禪師： 《轉正法輪》
+
+		這個可以先參考
+		09:05 釋道中 這一次的講座講述：四聖諦。
+		應該足夠清楚了。
+
+狂癡羯磨
+	17:48 釋道中 請教副院長：
+	1.《狂癡羯磨》的被羯磨人，是否不犯偷盜？如果他還能分辨自己的跟別人的物品，……能夠分辨自己的跟常住的物品。這樣是否犯偷盜？
+		19:55 Sbin108 1能分辨時，有犯偷罪
+
+	2.作狂癡羯磨的時候，被羯磨人，是否需要到現場？
+		2不需，因他也不會來
+		《彌沙塞部和醯五分律》：「佛言。今聽諸比丘遙與作狂白二羯磨」( 大正 22p125c )
+
+	3.《狂癡羯磨》是否能用「白眾」形式？單單「白眾」，沒有正式集僧作羯磨，是否有效力？
+		3，應羯磨法
+
+昭慧破僧
+	17:53 釋道中 最近不少人，都說昭慧，是破僧！但是末學覺得：她是女人，不能破法輪僧，
+	在她的寺院內部，也沒有分成二部作羯磨，也不算破羯磨僧
+	如果要以廣義的說她「破僧」，在沒有白四羯磨作喝諫之前，是否只能夠算她突吉羅罪？
+		20:07 Sbin108 他是邪見，用性平的俗法破二部僧受大戒，分成改革派、傳統派，分黨派破和合僧，不是約羯磨法判罪，
+		勸導不接受，入犯科是吉羅違教，
+		但破正見可以被舉罪，而三舉四羯磨法他也不能接受與作法，
+		故用世間行政法，除僧籍廢戒牒效力，等於擯出僧團了，磨擯，不懺悔過自新等於滅擯，如說淫欲不障道的惡見沙彌，擯出去
+
+污家行惡行突吉羅
+	18:47 釋道中 《汙家擯謗違諫戒》，如果，那二位比丘，祇有污家行惡行，沒有罵僧團有「愛恚怖痴」
+	是否單單「污家+行惡行」，祇有突吉羅罪？
+	末學查詢《十誦》，是祇有突吉羅
+	……但是很多比丘都以為「污家」是僧殘的方便罪？
+		20:09 Sbin108 是污家有吉、提等小罪，謗僧不受勸才是犯殘罪
+
 居士犯到五戒可以重受五戒嗎？
 	可以，
 
@@ -598,6 +782,8 @@ window.onload = function () {
 
 	《曇無德律部雜羯磨》：「
 	汝不曾作比丘尼不。」( 大正 22p1048c )
+
+	《十誦律》卷40〈六誦．11 雜誦．2 雜法〉：「佛言：「若比丘尼一反戒，不復聽出家受具戒。」」(CBETA 2024.R2, T23, no. 1435, p. 291a15-16)
 
 	《十誦律》：「
 	如佛說。比丘尼若捨戒。更不得受戒。頗有比丘尼捨戒更與受戒不犯耶。佛言。有。若比丘尼捨戒已。轉根作男子。與受戒者不犯」( 大正 23p377c )
