upload JY && .adb.ini

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,6 +520,27 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+	17:48 釋道中 請教副院長：
+1.《狂癡羯磨》的被羯磨人，是否不犯偷盜？如果他還能分辨自己的跟別人的物品，……能夠分辨自己的跟常住的物品。這樣是否犯偷盜？
+	19:55 Sbin108 1能分辨時，有犯偷罪
+
+2.作《狂癡羯磨》的時候，被羯磨人，是否需要到現場？
+	2不需，因他也不會來
+
+3.《狂癡羯磨》是否能用「白眾」形式？單單「白眾」，沒有正式集僧作羯磨，是否有效力？
+	3，應羯磨法
+
+17:53 釋道中 最近不少人，都說昭慧，是破僧！但是末學覺得：她是女人，不能破法輪僧，
+	在她的寺院內部，也沒有分成二部作羯磨，也不算破羯磨僧
+	如果要以廣義的說她「破僧」，在沒有白四羯磨作喝諫之前，是否只能夠算她突吉羅罪？
+		20:07 Sbin108 他是邪見，用性平的俗法破二部僧受大戒，分成改革派、傳統派，分黨派破和合僧，不是約羯磨法判罪，勸導不接受，入犯科是吉羅違教，但破正見可以被舉罪，而三舉四羯磨法他也不能接受與作法，故用世間行政法，除僧籍廢戒牒效力，等於擯出僧團了，磨擯，不懺悔過自新等於滅擯，如說淫欲不障道的惡見沙彌，擯出去
+
+18:47 釋道中 《汙家擯謗違諫戒》，如果，那二位比丘，祇有污家行惡行，沒有罵僧團有「愛恚怖痴」，是否單單「污家+行惡行」，祇有突吉羅罪？
+	末學查詢《十誦》，是祇有突吉羅
+	……但是很多比丘都以為「污家」是僧殘的方便罪？
+
+		20:09 Sbin108 是污家有吉、提等小罪，謗僧不受勸才是犯殘罪
+
 移夏，怎麼做？
 	18:55 釋道昧 請問法雲師週五早上離開淨苑，搭中午飛機回香港
 
