upload JY && .adb.ini

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,6 +520,38 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+受在家菩薩戒可以跟著誦梵網經菩薩戒嗎
+	請教法師
+	在家時有受在家菩薩戒
+	出家之後受了沙彌尼十戒
+	沒受梵網經菩薩戒
+	可以跟著誦梵網經菩薩戒嗎
+	可以先背梵網經菩薩戒嗎
+
+		19:02 釋道中 受她受的是《優婆塞戒六重28輕》嗎？
+		我查了一下，《優婆塞戒六重28輕》確實沒有說是菩薩戒，也沒有叫他發菩提心，沒有四不壞信……
+		嚴格來講，不算是菩薩戒
+	
+		19:03 釋道中 除了一起誦戒，其他都可以做。
+
+		如果要寬鬆一點，你問他有沒有發菩提心，如果他在受戒的時候有發菩提心，那也也許廣義來講也算受了菩薩戒。
+		因為菩薩戒的經文裡面，沒有明確的界限可以參考。
+		19:04 釋道中 以前我們受《優婆塞戒六重28輕》，都以為自己是受了，在家菩薩戒。
+		現在仔細研讀，研究才發現應該不算是。
+
+	19:03 法雨 是喔
+	梵網經裡說
+	菩薩戒是盡未來際的
+	其實我們應該都受過
+	只是不憶念而已😅
+	
+		19:05 釋道中 如果你有神通，看到過去，那就算受菩薩戒了，如果看不到，衹能以這輩子來看。
+	
+	19:05 法雨 那可以先背嗎？
+	因為也差不多要去受戒了
+
+		19:05 釋道中 當然可以
+
 	17:48 釋道中 請教副院長：
 1.《狂癡羯磨》的被羯磨人，是否不犯偷盜？如果他還能分辨自己的跟別人的物品，……能夠分辨自己的跟常住的物品。這樣是否犯偷盜？
 	19:55 Sbin108 1能分辨時，有犯偷罪
