--- a/法雨寺結大界唱相文.html
+++ b/法雨寺結大界唱相文.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <head>
     <title>法雨寺結大界唱相文</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body{padding-left: 1em;}
 ::selection{background: darkred;color:yellow;}
