--- a/滅諍犍度.html
+++ b/滅諍犍度.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>滅諍犍度</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <style>
         * {
