--- a/破僧輪的差別.html
+++ b/破僧輪的差別.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>破僧輪、破羯磨僧，的差別</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <style>
         * {
@@ -103,7 +104,7 @@
         #div1 {
             font-size: 18pt;
             color: orange;
-            white-space: pre-wrap;
+            /* white-space: pre-wrap; */
             /*margin: 0 0 0 3cm;*/
         }
 
@@ -361,14 +362,16 @@
                 <li>第十破僧戒</li>
                 <li>[1]破僧輪、破羯磨僧，有何差別？答曰：「有種種差別。</li>
                 <li>破僧輪、破羯磨僧，俱偷蘭遮。</li>
-                <li>而破僧輪，犯逆罪偷蘭遮，不可懺；破羯磨僧，犯非逆罪可懺偷蘭遮。</li>
-                <li>復次破僧輪，入阿鼻獄受罪一劫；破羯磨僧，不墮阿鼻獄。</li>
-                <li>復次破僧輪下至九人，破羯磨僧下至八人。</li>
-                <li>復次破僧輪，一人自稱作佛；破羯磨僧，不自稱作佛。</li>
-                <li>復次破僧[2]輪，界內界外一切盡破；破羯磨僧，要在界內別作羯磨。</li>
-                <li>復次破僧輪，必男子；破羯磨僧，男子女人二俱能破。</li>
-                <li>復次破僧輪，破俗諦僧；破羯磨僧，俗諦僧、第一義諦僧二俱能破。</li>
-                <li>復次破僧輪、但破閻浮提；破羯磨僧，通三天下。」」</li>
+                <ol>
+                    <li>而破僧輪，犯逆罪偷蘭遮，不可懺；破羯磨僧，犯非逆罪可懺偷蘭遮。</li>
+                    <li>復次破僧輪，入阿鼻獄受罪一劫；破羯磨僧，不墮阿鼻獄。</li>
+                    <li>復次破僧輪下至九人，破羯磨僧下至八人。</li>
+                    <li>復次破僧輪，一人自稱作佛；破羯磨僧，不自稱作佛。</li>
+                    <li>復次破僧[2]輪，界內界外一切盡破；破羯磨僧，要在界內別作羯磨。</li>
+                    <li>復次破僧輪，必男子；破羯磨僧，男子女人二俱能破。</li>
+                    <li>復次破僧輪，破俗諦僧；破羯磨僧，俗諦僧、第一義諦僧二俱能破。</li>
+                    <li>復次破僧輪、但破閻浮提；破羯磨僧，通三天下。」」</li>
+                </ol>
                 <li>(CBETA 2024.R2, T23, no. 1440, pp. 523c29-524a13)</li>
                 <li>[1] 破【大】，問破【聖】。</li>
                 <li>[2] 輪【大】，輪作佛【宋】【元】【明】【聖】。</li>
