--- a/vinaya/律藏的文獻層次.html
+++ b/vinaya/律藏的文獻層次.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>律藏的文獻層次</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <style>
         * {
