--- a/三十捨墮之犯悔開緣表.html
+++ b/三十捨墮之犯悔開緣表.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>三十捨墮之犯悔開緣表</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <style>
         * {
