--- a/不受食戒.html
+++ b/不受食戒.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>不受食戒</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <style>
         * {
