--- a/廣化律師全集.html
+++ b/廣化律師全集.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <head>
     <title>廣化律師全集</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 *{border-radius: 8px;padding: 3px;}
 /*body{background: black;color:white;}*/
