--- a/廣嚴淨苑結大界唱相文.html
+++ b/廣嚴淨苑結大界唱相文.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <head>
     <title>廣嚴淨苑結大界唱相文</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 *{border-radius: 8px;padding: 3px;}
 ::selection{background: darkred;color:yellow;}
