--- a/戒律中各戒條時限簡表.html
+++ b/戒律中各戒條時限簡表.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>戒律中各戒條時限簡表</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <style>
 *{border-radius: 8px;padding: 3px;}
