--- a/新衣不作壞色著戒.html
+++ b/新衣不作壞色著戒.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>新衣不作壞色著戒</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <style>
         * {
