--- a/比丘比丘尼的一日戒律流程.html
+++ b/比丘比丘尼的一日戒律流程.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <head>
     <title>比丘比丘尼的一日戒律流程</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 *{border-radius: 8px;padding: 3px;}
 ::selection{background: darkred;color:yellow;}
