upload JY && .adb.ini

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,7 +520,28 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+菩薩戒受戒資格
+	21:57 釋道中 請教副院長：
 
+	有香港居士，他們雖然可以儘量吃素食，但是食物中，幾乎無法避免含雞蛋的食物。 ……香港的素食餐廳很少， 在他們的上班地點以及生活四週 ，幾乎沒有純素食的餐廳
+
+	但是他們希望能夠受菩薩戒，這樣子是否符合受戒條件？還是說他們衹能受優婆塞6重28輕？或者瑜伽菩薩戒？
+
+	末學查詢菩薩戒，似乎祇有梵網經，有《不食肉戒》，其他菩薩戒，都沒有《不食肉戒》！
+
+	這樣，在其他國家，雖然沒有辦法完全素食，但是他們已經儘可能的吃素，衹是食物當中，難免摻雜一些雞蛋或是葷食的調味料的情況下，是否能夠受菩薩戒？
+
+		05:07 Sbin108 發菩提心才重要❗️可以受戒，參雜在一起是沒辦法的事。
+
+			上次法妙詢問受菩薩戒的情況，查詢大藏經，並且詢問了本因法師，是可以受菩薩戒，
+
+			目前我想，給他們受《瑜伽菩薩戒》
+			裡面沒有不可以吃肉這一條戒律。但是必須先受五戒
+			08:30 釋道中 我再研究看看受戒儀軌，反正也是明年以後的事，還不急。
+			08:38 釋道中 另外我詢問一位專門研究菩薩戒的法師，他也說吃肉是輕罪，對一個人懺悔就可以了。並不妨礙他受戒。
+			08:39 釋道中 狹義的來講，衹要他沒有七逆罪，就可以受菩薩戒。
+			其他吃到雞蛋或者洋蔥大蒜，衹要誦戒前發露懺悔，即可
+		
 受在家菩薩戒可以跟著誦梵網經菩薩戒嗎
 	請教法師
 	在家時有受在家菩薩戒
@@ -9178,13 +9199,10 @@ window.onload = function () {
 
 	12:58	釋道中	請教副院長：
 	作過送菜羯磨以後，外送的菜，寺裡面的人可以拿來變成私人物品來吃嗎？
-
 	作過送菜羯磨的菜，是屬於常住常住物？還是現前現前物？
-	17:27	Sbin108	1，約ㄌ
-	17:53	釋道中	不清楚您的意思？
 
 	是說：還是常住常住物嗎？就不是個人可以吃的
-	21:19	Sbin108	我網路不良
+
 	21:20	Sbin108	是，不應再被個人去拿走吃
 	21:21	Sbin108	不是打板，分享分配東西，所以這不是現前物
 	22:00	釋道中	瞭解了！
