--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,6 +520,94 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+有一位尼大姊在問，他還未出家時，上班的時候都會從公司帶一些公司的東西回來，現在出家了，了知因果，請問這樣要怎麼彌補呢？
+
+	09:10 釋道中 就拿錢還給老闆啊……
+	09:11 釋道中 如果她那時候沒有受五戒，就沒有犯戒
+	09:12 釋道中 衹是，比丘也不可以送東西、錢……給居士們，會變成汙家
+	09:13 釋道中 所以……我想……就修行回向給老闆吧！下輩子再還錢
+
+伴尼超過七日
+	住院開刀的法師還沒辦法出院
+	所以會超過七日
+	這應該是沒問題的
+	但是如果
+	伴尼只剩一個
+	可以超過七日嗎？
+
+		生病的那個人一定是沒有破夏
+
+		陪伴的那一位，據我所知也是，就像是你回家看望父母，被父母強留下來也是沒有破夏
+		
+		所以我想：他為了看顧病人，也算是上面這種情況，照顧病人，超過7天也是沒有破夏
+
+		而且他自己一個人離開也是犯獨行，所以照顧病人的人，也不能一個人離開醫院。
+
+中午過後糙米水可以喝嗎？？？這是老菩薩特地煮給信徒喝的
+	12:46 釋道中 不可以，
+	除非他煮的……，祇有煮一點點的時間，那個米都沒有破開。
+	但這衹是開緣，過午不食，最好下午都不要吃東西。
+
+	13:00 nine 好的謝謝師父
+	這種天氣那麼熱喝舒跑是可以呢還是開緣？
+
+		19:37 釋道中 可以喝
+		19:37 釋道中 那算是果汁。真的有需要是可以喝
+
+中國佛教會也是訂在65歲受戒
+	弟子在香港聽幾位比丘尼師父說聽果清律師講比丘尼六十幾歲以後如果求授具足戒不得戒體，弟子覺得奇怪，因爲今年弟子的一位西方眾道友剛好滿70歲，圓通寺讓他受三壇大戒。另一位式叉尼滿68歲，淨願寺今年也收她了。弟子請教圓一法師，她說四分律上沒有提受具戒年齡，應該是十誦律規定是70歲。是因為之前發生一些事，台灣的中國佛教會把年齡訂在65歲。據弟子所知，大陸那邊的中國佛教會也是訂在65歲。想請教師父，到底是那部律規定受戒年齡呢？感恩師父慈悲指導🙏🙂
+	
+		09:01 釋道中 《摩訶僧祇律》卷23：「佛具問上事：「汝實爾不？」答言：「實爾。」佛言：「從今日後太老不應與出家。」太老者，過七十、若減七十，不堪造事，臥起須人，是人不聽[19]出家。若過七十能有所作，是亦不聽。年滿七十康健能修習諸業，聽與出家。若太老不應與出家。若已出家者，不應驅出。若度出家受具足者，越比尼罪。是名太老」(CBETA 2024.R3, T22, no. 1425, p. 418b7-14)[19] 出家【大】，〔－〕【宋】【元】【明】【宮】
+		
+		09:07 釋道中 《薩婆多毘尼毘婆沙》卷9：「年六十不得受大戒，設師僧強授亦不得，以其人不任堪苦行道。又心智鈍弱，唯聽為沙彌。七歲[8]以下亦不聽度，度受戒，俱突吉羅」(CBETA 2025.R2, T23, no. 1440, p. 559b10-12)[8] 以【大】，已【宋】【元】【明】　
+		
+		09:08 釋道中 所以有兩個標準60歲或者是70歲，一般我們會用比較寬鬆的標準70歲。
+
+		09:10 釋道中 但是除了這兩部律，其他的律藏，都沒有限制年齡，南傳比丘也沒有限制，因為南傳的巴利文藏經也沒有說年齡的限制
+		……既然佛陀沒有說，就是不限年齡。
+		
+		09:14 釋道中 但這衹是說，超過年齡，不能做比丘，
+		做沙彌是都可以的。
+		
+		09:36 釋道中 若已出家者，不應驅出。若度出家受具足者，越比尼罪。
+
+		其實這是「輕遮」，就算你真的給他做比丘，也不需要滅擯
+
+		衹是給他受戒的和尚，有罪過而已。
+
+精舍在六樓，如果結大界可以只結樓層嗎？還是要沿著樓梯上下結至第一層地面，才可到達水輪！
+	09:28 釋道中 我這裡有三個答案，
+
+	第1個是本因法師的答案，他的做法是要從1樓大地那邊，沿著樓梯上來，沿著樓梯的表面，一小塊路面上來，到你那邊6樓繞一圈，這樣子才會接到大地。
+
+	第2個答案是：宗興長老的做法，比如你6樓有12根柱子，你就以1根柱子接到大地。這樣接上來到你6樓的樓層，但是你要除去其他11根柱子，這樣子就是有1根柱子接到大地，其他的柱子，白羯磨文的時候都白「除去其它11根柱子」
+
+	第3個是我個人的答案，我認為《四分律》原文的意思來解讀，其實〈結大界〉就是要區分一個範圍而已，以山的環繞、或是以樹林、石頭……就是確定一個範圍，那現在我們大樓樓層，每一層都是很明確的範圍，所有權跟產權都非常的清楚，所以我認為，你在6樓裡面，沿著牆壁內緣，繞一圈就可以了。
+	
+	09:29 釋道中 你自己選擇，……
+
+	看你現在的情況，還有你要比較嚴格的方式？，還是比較寬鬆的方式？
+
+	如何來行持，你就自己選擇吧。
+
+請問戒法：
+	1、比丘戒第二十二條：與尼說法至暮戒，有比丘尼說：全國齋僧作大蒙山至日暮，不是僧伽藍，有犯此戒？
+	2、比丘尼初夜因疲勞獨宿，犯下品偷蘭遮，中夜獨宿，犯何罪？
+	3、常住使用的掃把、畚箕，抹布等消耗品，大家共用，輪到某人使用時，掃把斷了，不能再用，使用者需補貼常住嗎？
+
+		22:26 釋道中 1.這是用羯磨法，正式請教誡才犯，一般說法，比丘尼在旁邊聽不犯
+		22:30 釋道中 2.按《五分律》，下品蘭
+		22:30 釋道中 2.如果嚴格按《四分律》，犯殘
+		22:34 釋道中 3.正常消耗到結束，不必補貼。如果心中懷疑，就補貼舊掃把的當時的價錢
+
+沙彌二衣，到底指什麼衣？
+	16:33 釋道中 沙彌沒有袈裟，
+	祇有縵衣，上下2衣，
+	可以叫「縵五衣，縵七衣」
+	就帶過去，還有鉢
+	16:33 釋道中 不是袈裟，是上下二衣，縵衣
+	16:35 釋道中 是的，沙彌尼跟式叉尼，都要學習比丘尼戒，所以要隨身攜帶，
+
 菩薩戒受戒資格
 	21:57 釋道中 請教副院長：
 
@@ -1230,7 +1318,7 @@ window.onload = function () {
 		補充一下。
 			2.可以坐在椅子上睡沒關係，不要躺到床鋪上跟地上就可以。不要「脅著地」，「脅著床」，就不算睡覺。(脅：就是腋下。)
 
-請教法師，尼想請問，根據大正藏23來說，不犯二篇，另外有部律來說，很多有開源，但我們是根四分律，會否亦可以呢？
+請教法師，尼想請問，根據大正藏23來說，不犯二篇，另外有部律來說，很多有開緣，但我們是根四分律，會否亦可以呢？
 
 		以四分律為主，但是其他的，衹要是佛陀說的都是有效。都可以當做標準。都可以照著做
 
