--- a/vinaya/index.html
+++ b/vinaya/index.html
@@ -499,6 +499,7 @@ function dt() {
             <input type="button" class="lg" value="ini" onclick="MyIni('ini')">
             <input type="button" class="dv" value="期中考" onclick="MyIni('期中考')">
             <input type="button" class="dc" value="期末考" onclick="MyIni('期末考')">
+            <input type="button" class="p" value="2021" onclick="MyIni('2021')">
             <input type="button" class="t" value="2022" onclick="MyIni('2022')">
             <input type="button" class="lsg" value="2023" onclick="MyIni('2023')">
             <input type="button" class="da" value="2024" onclick="MyIni('2024')">
