update my Sila QA

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,8 +520,39 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
-有一位尼大姊在問，他還未出家時，上班的時候都會從公司帶一些公司的東西回來，現在出家了，了知因果，請問這樣要怎麼彌補呢？
+普度超度的食物可不可以吃？
+	一般來說出家人不吃普度的食物，那請問梁皇寶懺時在地藏殿放超薦牌位供的食物可以吃嗎？常住說普度是最後一天，而超薦供的食物是供養佛菩薩。超薦牌位是居士爲祖先，冤親債主所設的，特定的，不是普度，食物出家人可以吃，請問師父到底可不可以吃呢？
+		10:10 釋道中 戒律跟經典上， 都沒有說不可以吃。
+		只有密宗的說：吃了會咒語不靈驗。
+		或者有的法師認為鬼神吃了，就是不清凈的食物。
+		但是我沒有看到佛陀在任何地方說不可以吃這種食物。
+		10:10 釋道中 我自己是有吃。
 
+		《妙臂菩薩所問經》卷3〈9 說諸遮難分〉：「喫供養殘食及供養鬼神殘食，或喫棄地之食；又或於畜生女行不淨事，或與女人於伽藍清淨之處行不淨事；或以禁呪或用藥力害諸蛇蟲；或乘象馬、牛驢，欲令急速，強鞭支之；又於病患之人及苦難之人不發慈悲救濟之心；如是等人於真言明終不成就。」(CBETA 2025.R2, T18, no. 896, p. 755c14-20)
+
+犯敬法而二部眾中出罪的規定，漸演化而成為「犯僧殘」的處分。如見比丘來而沒有起來禮迎，就要在二部眾中，半月行摩那埵，您能找到律典資料嗎？
+	波逸提175	百歲尼不敬比丘戒
+	不禮敬比丘，祇有波逸提，沒有僧殘，
+	這樣說的人，可能弄錯了！或者聽的人，會錯意了。
+
+差尼請教誡羯磨，可以在誦戒日前ㄧ天作羯磨差尼嗎？還是要在誦戒正日才能差尼？
+	可以前一日羯磨差尼，但要當日(比丘僧誦戒日)，去請教誡，(羯磨法不可過夜)。
+	然後，第二日問比丘僧團，回教誡。尼僧團再誦戒。
+
+打電話請教誡，旁邊需要伴尼嗎？
+	電話不必伴尼！不算獨行！你明明人在尼寺。
+
+有三個持戒的比丘尼到了一個無結大界的道場，參與眾法說戒，此說戒事不成就，是否可以隔天三人對首再說戒，是否比較如法？此道場沒作差尼請教誡羯磨，直接輪值的比丘尼有打電話去南普陀請教誡，是否犯缺法？
+	1，說戒不如法，吉罪
+	1-1，如果要自己重新誦戒，應該去界外，或者在另外一個房間（村界）誦
+
+	2，沒有羯磨，不算正式請，不如法，吉罪。
+	如果有白眾，可以說是缺法吉罪，如果沒有白眾，應該是不如法吉
+	2-2，這種情況，打電話請教誡。如果不羯磨，應該是〈禮僧足〉即可。就沒有犯罪……若比丘尼僧不和合，應禮僧足
+	2-3，可以建議她們寺院，每次都結小界來誦戒……有些寺院，不結大界，就是每次結小界誦戒。
+	不過所有人都必須在相隔一個手臂的範圍之內。
+
+有一位尼大姊在問，他還未出家時，上班的時候都會從公司帶一些公司的東西回來，現在出家了，了知因果，請問這樣要怎麼彌補呢？
 	09:10 釋道中 就拿錢還給老闆啊……
 	09:11 釋道中 如果她那時候沒有受五戒，就沒有犯戒
 	09:12 釋道中 衹是，比丘也不可以送東西、錢……給居士們，會變成汙家
@@ -536,11 +567,8 @@ window.onload = function () {
 	可以超過七日嗎？
 
 		生病的那個人一定是沒有破夏
-
 		陪伴的那一位，據我所知也是，就像是你回家看望父母，被父母強留下來也是沒有破夏
-		
 		所以我想：他為了看顧病人，也算是上面這種情況，照顧病人，超過7天也是沒有破夏
-
 		而且他自己一個人離開也是犯獨行，所以照顧病人的人，也不能一個人離開醫院。
 
 中午過後糙米水可以喝嗎？？？這是老菩薩特地煮給信徒喝的
@@ -554,7 +582,7 @@ window.onload = function () {
 		19:37 釋道中 可以喝
 		19:37 釋道中 那算是果汁。真的有需要是可以喝
 
-中國佛教會也是訂在65歲受戒
+中國佛教會也是訂在65歲受戒(大陸規定60歲)
 	弟子在香港聽幾位比丘尼師父說聽果清律師講比丘尼六十幾歲以後如果求授具足戒不得戒體，弟子覺得奇怪，因爲今年弟子的一位西方眾道友剛好滿70歲，圓通寺讓他受三壇大戒。另一位式叉尼滿68歲，淨願寺今年也收她了。弟子請教圓一法師，她說四分律上沒有提受具戒年齡，應該是十誦律規定是70歲。是因為之前發生一些事，台灣的中國佛教會把年齡訂在65歲。據弟子所知，大陸那邊的中國佛教會也是訂在65歲。想請教師父，到底是那部律規定受戒年齡呢？感恩師父慈悲指導🙏🙂
 	
 		09:01 釋道中 《摩訶僧祇律》卷23：「佛具問上事：「汝實爾不？」答言：「實爾。」佛言：「從今日後太老不應與出家。」太老者，過七十、若減七十，不堪造事，臥起須人，是人不聽[19]出家。若過七十能有所作，是亦不聽。年滿七十康健能修習諸業，聽與出家。若太老不應與出家。若已出家者，不應驅出。若度出家受具足者，越比尼罪。是名太老」(CBETA 2024.R3, T22, no. 1425, p. 418b7-14)[19] 出家【大】，〔－〕【宋】【元】【明】【宮】
