update my Sila QA

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -520,6 +520,85 @@ window.onload = function () {
 
 	<input type="button" id="btnHidden" value="隱藏多餘按鈕" />
 <div id="div1">
+	請教副院長：
+如果居士來寺廟裏面。供養僧團齋僧。 辦桌或者 供養食物，平分給所有人
+	這樣子的供養物，算是現前僧物嗎？還是算施主的食物？
+	這種食物，在別眾食戒裏面，怎麼算？
+
+		1，齋僧大會，是屬於護法會的資產，這個很容易理解。
+		2，但是送來寺院裏的，當時整桌食物有手受，難道整桌的食物不是已經屬於比丘僧的嗎？
+		3，別眾食戒裏面，去拖鉢，一家只能三個比丘，如果到了寺院裏面供養，或者是齋僧大會，不是就超過三個人了？還是要以「大會時」來開緣？
+		4，如果手受之後，或者交給典座之後。就是現前僧物，那是不是就不算是別眾食？
+		5，如果居士拿錢給典座來 處理辦桌的食物，這個食物屬於誰呢？
+		
+		是，了解了，
+		感謝副院長！
+		末學可能在別眾食戒裏面的施主家，跟大會的地方，這裏有點搞模糊了！。
+
+居士參加法會時，午餐超過12點了怎麼辦？
+	如果是一天的話還好但是連續七天中午都隨便吃加減吃，呃......
+		像是這個月。日中時間大概是11:40幾分，所以12點明顯已經超過了，就是過午了，
+		所以如果你一定要參加這一類的法會……法會人多，中午一定會超過時間。
+		，要不然你就那幾天不要受八關齋戒。要不然就是不去參加法會。
+
+四藥篇體性的問題
+	弟子對於四藥篇學的不是很透徹，故想請教師父關於做盡形壽藥的問題。之前在戒律道場，師長說即使是製成膠囊（無色無味），但如果裡面主要成分是果汁，或是水果淬取物（像櫻桃汁等），過午後也不可以食用，因為它體性的問題。但是有學戒的師父又說枸杞（單味）可以做盡形壽藥，而現在的常住用小青檸，加糖和鹽熬煮而成的糖漿液（爲治咳嗽）也可以做盡形壽藥。弟子的理解是只要有糖有香味有果汁就不可以做盡形壽藥。請問師父可以嗎？
+
+	如果不能作盡形壽藥，請問是否可以作七日藥或是非時漿嗎？
+
+		這個四種藥，就是以裏面所含的成分來判定，
+
+		其實嚴格來講按：四分律，只要終身藥裏面摻雜到七日藥，那就是七日藥。如果摻雜到，非時藥就是非時藥，如果是摻雜到食藥就是食藥了。
+
+		上面他這種說法，是按照一切有部的判斷，就是說：哪一種成分多，就算是哪一種。
+
+		一般來講，膠囊裏面的藥都是藥粉成分多，它不太會摻雜食物的成分，因為都已經提煉過了
+
+		膠囊，基本上都可以判定是終身藥。
+
+		那如果是你煮成的糖漿啊，那基本上是屬於七日藥，除非它真的熬成像那種枇杷膏之類的，那已經變成藥漿了，那就是藥物了，你看裏面成分的多寡來判斷。
+
+四獨戒，去打禪七
+	聽師父講四分律比丘尼戒相講第37集時，很感恩師父以問答的方式來讓弟子們學習關於持戒。其中有一個問題談到有什麼理由可以讓修行人非常狂熱且持久的持戒。師父您的教導是第一個是能夠產生法喜，不得不追求。第二個是所修行的法門和持戒能夠完全結合。弟子對這個問題想要多請教師父。因為自從受了大戒之後，爲了持四獨戒，常常有些困擾，有的時候想要找個伴去打禪七，但是因為伴尼修行法門不同乃至於其他種種原因，所以就找不到伴，而無法成行。
+	
+		如果你要去打禪七，確實是一個麻煩，但是沒有其他比丘尼陪伴你，你找居士陪伴你過去也可以。
+	
+禪七過午不食
+	另外，中國禪宗道場打禪七12支香一整天，晚上7點有吃包子，弟子過午不食，但到晚上九點跑香就真的沒體力，這時就會思考那到底要不要持這條戒，所以好像也無法很好的和修行法門結合，諸如此類，敢問師父在這方面可不可以給弟子一些指導？
+		
+		確實，你去其他的寺院，如果別人下午晚上都在吃，甚至中午吃飯都超過時間，這確實是很麻煩，但是真的不行的話，這是比較輕的罪業，是可以懺悔的。就是說，你真的不行，跟著他們吃的話，回來再懺悔了，因為清凈有兩種，一種是都沒有犯罪，一種是犯罪都能夠懺悔。
+
+另外請問師父是不是要持戒一段時間之後（比方說十年）才能夠較爲深刻的體會到利益呢？
+
+	受持戒律的法喜，是因人而異了，有些人要十年，有些人也許一天，有些人一輩子都得不到法喜，
+	這是看個人的狀況。
+	我上課的講座，是為了鼓勵新學者而已，讓大家有一個學習的動力……參考就好了，每個人狀況其實是不一樣的。
+	補充一下，不管你有沒有法喜的心，你只要受持戒律，就會得到功德。
+
+	我的意思就是：不要管心中有沒有法喜、或是歡喜、或是安樂……，都應該好好的受持戒律，
+	這樣子就可以走在解脫的道路上。
+	如果有犯罪，就懺悔，懺悔以後繼續往前，繼續修行就對了，
+	一路往前，大部分人不可能一下子就全部清凈的，就慢慢一邊懺悔，一邊學習，總有一輩子會成功的。
+
+隨舉戒迫使A犯獨宿
+	今天在戒學群組研討四分律比丘戒相表記單提罪第69條（比丘尼第53條）：隨舉戒的具四緣成犯。討論到第三犯緣：隨順同事（供給所須、共同羯磨、止宿、言語）。止宿這一點，在比丘來說，沒有問題，因為可以獨宿，但對比丘尼來講, 如果A犯了第52條惡見違諫戒（提），而僧團中因為沒人想犯第53條隨舉戒，而無人願意與A共同止宿，那不就會迫使A犯獨宿（僧殘）嗎？這種情形僧團可以如何處理？
+
+	研討小組的主持人請弟子請教精律的比丘，請師父慈悲解惑。阿彌陀佛🙏🙂
+
+	真修頂禮
+
+		15:58 釋道中 1. 《四分律》卷22〈第二分．2 尼戒法十七僧殘法〉：「不犯者，二比丘尼共渡水，……若伴比丘尼命終、若休道、若遠行、若賊將去、若命難、或梵行難、或惡獸難、或為強力者將去，被縛將去，或為水所漂，無犯。
+		2. 若二比丘尼入村，若於村中[＊]間一伴[6]比丘尼死、或休道、或遠行、或為賊將去，乃至水所漂如上，無犯。
+		3. 若共二比丘尼宿，舒手相及處；若一比丘尼出大小便、或受經誦經、若樂靜獨處經行、或為病尼煮羹粥作飯、若命終、若休道、若遠行、若賊將去，乃至為水所漂，亦如上無犯。
+		4. 與二比丘尼共行，不離見聞處，不犯。若一比丘尼出大小便，或命終、或休道、或為賊所將去，乃至為水所漂，如上不犯」
+
+		1，如上《四分律》原文，伴尼自己離去(因為你被三舉羯磨)，你不犯
+		2，你被人抓去、被趕走(被僧團趕走的)…你不犯
+		3，可以請女居士作伴
+		4，也可以請沙彌尼、式叉作伴，雖然下三眾有吉罪，但以小罪換大罪
+		5，以上只是假設的狀況，現在幾乎不會有這種情況，極少僧團會作三舉羯磨，也極少會有極端的邪見，就算昭慧那種人，也無人給她作三舉羯磨。
+		6，我覺得，研究戒律，不必太專注一些不可能的狀況，那無意義。應該專注日常會用到的事情，才有用。才不會變成學術的研究一樣，不切實際
+
 普度超度的食物可不可以吃？
 	一般來說出家人不吃普度的食物，那請問梁皇寶懺時在地藏殿放超薦牌位供的食物可以吃嗎？常住說普度是最後一天，而超薦供的食物是供養佛菩薩。超薦牌位是居士爲祖先，冤親債主所設的，特定的，不是普度，食物出家人可以吃，請問師父到底可不可以吃呢？
 		10:10 釋道中 戒律跟經典上， 都沒有說不可以吃。
